<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/scroll1"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:weightSum="1">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              >
    <ImageView android:id="@+id/help"
    			android:src="@drawable/help"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               />
	<TextView android:id="@+id/recruit"
    		  android:text="@string/recruit"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#FFF"
              android:gravity="center"
              style="bold" android:textSize="15sp"/>
	<ImageView android:layout_width="wrap_content" 
	    android:src="@drawable/osmlogo" 
	    android:id="@+id/imageView2" 
	    android:layout_height="wrap_content" 
	    android:adjustViewBounds="true" 
	    android:scrollbarAlwaysDrawHorizontalTrack="true" 
	    android:layout_gravity="center" android:padding="5dp"></ImageView>
    <TextView android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:textAppearance="?android:attr/textAppearanceSmall" 
    android:id="@+id/textView3" android:text="@string/osm" 
    android:layout_gravity="center" android:paddingBottom="5dp"></TextView>
    
    	<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/ButtonDone" android:layout_gravity="center"
			android:text="@string/quit"></Button>
	
</LinearLayout>
</ScrollView>